Ensure text remains visible during webfont load and multiples updates
Improve the website with the Google performance advices and other updates

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -42,7 +42,7 @@ main {
 	padding-left: 190px
 }
 
-#lang {
+.lang {
 	position: absolute;
 	bottom: 0px;
 	width: 100%;
@@ -58,7 +58,7 @@ main {
 	z-index: 2;
 }
 
-#lang i {
+.lang i {
 	-webkit-transition: transform 0.5s ease 0s;
 	-moz-transition: transform 0.5s ease 0s;
 	-ms-transition: transform 0.5s ease 0s;
@@ -66,7 +66,7 @@ main {
 	transition: transform 0.5s ease 0s;
 }
 
-#lang:hover i {
+.lang:hover i, .lang:active i, .arrowhover {
 	-webkit-transform: rotate(180deg);
 	-moz-transform: rotate(180deg);
 	-ms-transform: rotate(180deg);
@@ -74,16 +74,8 @@ main {
 	transform: rotate(180deg);
 }
 
-.arrowhover {
-	-webkit-transform: rotate(180deg);
-	-moz-transform: rotate(180deg);
-	-ms-transform: rotate(180deg);
-	-o-transform: rotate(180deg);
-	transform: rotate(180deg);
-}
-
-#lang:hover+li ul,
-.lang_child:hover {
+.lang:hover + li ul, .lang:active + li ul,
+.lang_child:hover, .lang_child:active {
 	display: block;
 	-webkit-animation: fadein .6s;
 	-moz-animation: fadein .6s;
@@ -137,17 +129,17 @@ main {
 	}
 }
 
-#lang img {
+.lang img {
 	vertical-align: middle;
 	margin-left: 16px
 }
 
-#lang+li ul img {
+.lang+li ul img {
 	vertical-align: middle;
 	margin-left: 16px
 }
 
-#lang span,
+.lang span,
 .lang_child span {
 	position: relative;
 	text-transform: uppercase;
@@ -155,7 +147,7 @@ main {
 	left: 16px
 }
 
-#lang i {
+.lang i {
 	position: absolute;
 	right: 0
 }
